# lambdapi-logics

./: AUTHORS.md  CHANGES.md  Makefile  README.md  lambdapi-logics.opam  logic.opam  opam
.github/workflows/: main.yml
TFF/: Makefile  Prop.lp  Set.lp
U/: Classic.lp  Inf.lp  Prop.lp  Set.lp
Zenon/: CCC.lp  ND_eps_aux.lp
